--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/react-virtualized": "^9.18.3",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-scripts-ts": "2.16.0",
+    "react-virtualized": "^9.19.1",
     "tsmonad": "^0.8.0"
   },
   "scripts": {
